deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang
  labels:
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang
      tier: backend
  template:
    metadata:
      labels:
        app: golang
        tier: backend
    spec:
      containers:
      - name: golang
        image: nurlan1992/golang-app:v1.0
        imagePullPolicy: Always
        resources:
          requests:
            memory: 50Mi
            cpu: 50m
          limits:
            memory: 100Mi
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: golang
  namespace: default
spec:
  selector:
    app: golang
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 32445
