ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diploma
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: diploma.kz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: golang
            port:
              number: 8080
